tmunit-0.2.1/language/grammar.output
Terminals which are not used

   EOF_TOKEN


Rules never reduced

  165 BoundedRepetitionTxBlockListElement: OPEN_PARANTHESES __txBlockStart_act TxBlockList CLOSE_PARANTHESES FixedValue


State 366 conflicts: 3 reduce/reduce


Grammar

    0 $accept: Config $end

    1 Config: Section
    2       | Section Config

    3 Section: PropertiesSection
    4        | DefinitionsSection
    5        | TransactionsSection
    6        | ThreadsSection
    7        | SchedulesSection
    8        | InvariantsSection
    9        | VarExprTestSection

   10 VarExprTestSection: VAR_EXPR_TEST_SECT_HEADER _varExprTestSectstart_act VarExprTestDefList

   11 _varExprTestSectstart_act: /* empty */

   12 VarExprTestDefList: VarExprTestDef SEMICOLON
   13                   | VarExprTestDefList VarExprTestDef SEMICOLON

   14 VarExprTestDef: NAME VALUE_ASSIGN FixedValue
   15               | LOCAL_VARIABLE_NAME VALUE_ASSIGN FixedValue
   16               | ArrayDef VALUE_ASSIGN Value
   17               | ARRAY_NAME VariableExpression CLOSE_BRACKETS VALUE_ASSIGN Value
   18               | LOCAL_ARRAY_NAME VariableExpression CLOSE_BRACKETS VALUE_ASSIGN Value
   19               | Constant VALUE_ASSIGN FixedValue
   20               | VAR_EXPR_EVAL OPEN_PARANTHESES VariableExpression CLOSE_PARANTHESES
   21               | VAR_EXPR_EVAL OPEN_PARANTHESES ConditionalExpression CLOSE_PARANTHESES

   22 PropertiesSection: PROPERTIES_HEADER __prop_sec_act_1 PropertyDefList

   23 __prop_sec_act_1: /* empty */

   24 PropertyDefList: PropertyDef SEMICOLON
   25                | PropertyDefList PropertyDef SEMICOLON

   26 PropertyDef: NAME VALUE_ASSIGN FixedValue

   27 DefinitionsSection: DEFINITIONS_HEADER __def_sec_act_1 VariableDefList

   28 __def_sec_act_1: /* empty */

   29 VariableDefList: VariableDef SEMICOLON
   30                | ArrayInit SEMICOLON
   31                | VariableDefList VariableDef SEMICOLON
   32                | VariableDefList ArrayInit SEMICOLON

   33 ArrayInit: ArrayDef VALUE_ASSIGN Value

   34 ArrayDef: ARRAY_NAME Range CLOSE_BRACKETS
   35         | LOCAL_ARRAY_NAME Range CLOSE_BRACKETS

   36 VariableDef: LOCAL_VARIABLE_NAME VALUE_ASSIGN FixedValue
   37            | NAME VALUE_ASSIGN Value
   38            | Constant VALUE_ASSIGN Value
   39            | Scope LOCAL_VARIABLE_NAME VALUE_ASSIGN Value
   40            | ARRAY_NAME VariableExpression CLOSE_BRACKETS VALUE_ASSIGN Value
   41            | LOCAL_ARRAY_NAME VariableExpression CLOSE_BRACKETS VALUE_ASSIGN Value
   42            | Scope ArrayAccess VALUE_ASSIGN Value
   43            | LOCAL_VARIABLE_NAME VALUE_ASSIGN SMALLER_THAN Range GREATER_THAN

   44 TransactionsSection: TRANSACTIONS_HEADER __tx_sec_act_1 TxDefList

   45 __tx_sec_act_1: /* empty */

   46 TxDefList: TxDef SEMICOLON
   47          | TxDefList TxDef SEMICOLON

   48 TxDef: DescriptionName __tx_sec_act_2 DEFINITION_ASSIGN TxSpec

   49 __tx_sec_act_2: /* empty */

   50 TxSpec: TxSpecElement
   51       | TxSpec COMMA TxSpecElement

   52 TxSpecElement: TxOp
   53              | TxLoopDef
   54              | TxConditionalDef
   55              | VarAssigns
   56              | LABEL
   57              | Jump
   58              | Delay

   59 Delay: DELAY_OP VariableExpression CLOSE_PARANTHESES

   60 TxOp: MemAccessOp
   61     | AbortOp
   62     | MemAllocOp
   63     | MemBarrierOp

   64 MemAccessOp: READ_ACCESS_OP VariableExpression CLOSE_PARANTHESES
   65            | READ_ACCESS_OP VariableExpression COMMA VariableExpression CLOSE_PARANTHESES
   66            | WRITE_ACCESS_OP VariableExpression CLOSE_PARANTHESES
   67            | WRITE_ACCESS_OP VariableExpression COMMA VariableExpression CLOSE_PARANTHESES

   68 AbortOp: ABORT_OP FixedValue CLOSE_PARANTHESES

   69 MemAllocOp: MEM_ALLOC_OP VariableExpression COMMA VariableExpression CLOSE_PARANTHESES
   70           | MEM_FREE_OP VariableExpression CLOSE_PARANTHESES

   71 MemBarrierOp: MEM_BARRIER_OP NAME COMMA NAME CLOSE_PARANTHESES

   72 TxLoopDef: LOOP_START LoopCondition __txLoopDef_act_1 COLON TxSpec CLOSE_CURLY_BRACKETS

   73 __txLoopDef_act_1: /* empty */

   74 LoopCondition: Condition
   75              | Variable VALUE_ASSIGN LoopRange

   76 LoopRange: OPEN_BRACKETS Range CLOSE_BRACKETS

   77 TxConditionalDef: CONDITION_START ConditionalTxSpec CLOSE_CURLY_BRACKETS

   78 ConditionalTxSpec: ConditionalTxSpecElement
   79                  | ConditionalTxSpec BAR ConditionalTxSpecElement
   80                  | ConditionalTxSpec BAR DefaulfConditionTxSpecElement

   81 ConditionalTxSpecElement: Condition __conditionalTxSpecElement_act_1 COLON TxSpec

   82 __conditionalTxSpecElement_act_1: /* empty */

   83 DefaulfConditionTxSpecElement: __defaultCondTxSpecElement_act_1 TxSpec

   84 __defaultCondTxSpecElement_act_1: /* empty */

   85 Condition: OPEN_BRACKETS ConditionalExpression CLOSE_BRACKETS

   86 ConditionalExpression: SimpleConditionalExpression
   87                      | ComplexConditionalExpression

   88 SimpleConditionalExpression: VariableExpression RelationalOp VariableExpression

   89 ComplexConditionalExpressionElement: OPEN_PARANTHESES SimpleConditionalExpression CLOSE_PARANTHESES
   90                                    | UnaryBooleanOp OPEN_PARANTHESES SimpleConditionalExpression CLOSE_PARANTHESES

   91 ComplexConditionalUnit: ComplexConditionalExpressionElement
   92                       | OPEN_PARANTHESES ComplexConditionalExpression CLOSE_PARANTHESES
   93                       | UnaryBooleanOp OPEN_PARANTHESES ComplexConditionalExpression CLOSE_PARANTHESES

   94 ComplexConditionalExpression: ComplexConditionalUnit
   95                             | ComplexConditionalUnit BooleanOp ComplexConditionalUnit

   96 VarAssigns: OPEN_CURLY_BRACKETS __varAssigns_act_1 VarAssignList CLOSE_CURLY_BRACKETS

   97 __varAssigns_act_1: /* empty */

   98 VarAssignList: VarAssignment
   99              | VarAssignList COMMA VarAssignment

  100 VarAssignment: Variable VALUE_ASSIGN VariableExpression

  101 Jump: JUMP_OP LABEL CLOSE_PARANTHESES

  102 RelationalOp: EQUAL
  103             | NOT_EQUAL
  104             | SMALLER_THAN
  105             | GREATER_THAN
  106             | SMALLER_EQUAL
  107             | GREATER_EQUAL
  108             | NOT

  109 BooleanOp: AND
  110          | OR

  111 UnaryBooleanOp: NOT

  112 Value: FixedValue
  113      | RandomizedRange

  114 FixedValue: NUMBER

  115 Constant: NAME_ALL_CAPITALS

  116 DescriptionName: NAME
  117                | NAME_ALL_CAPITALS

  118 RandomizedRange: SMALLER_THAN Range GREATER_THAN

  119 Range: VariableExpression RANGE_SEPERATOR VariableExpression
  120      | VariableExpression RANGE_SEPERATOR VariableExpression SEMICOLON VariableExpression

  121 Variable: NAME
  122         | LOCAL_VARIABLE_NAME
  123         | Constant
  124         | Scope LOCAL_VARIABLE_NAME
  125         | ArrayAccess
  126         | Scope ArrayAccess

  127 ArrayAccess: ARRAY_NAME VariableExpression CLOSE_BRACKETS
  128            | LOCAL_ARRAY_NAME VariableExpression CLOSE_BRACKETS

  129 ManagedMemAccess: READ_ACCESS_OP VariableExpression CLOSE_PARANTHESES
  130                 | WRITE_ACCESS_OP VariableExpression CLOSE_PARANTHESES
  131                 | READ_ACCESS_OP VariableExpression COMMA VariableExpression CLOSE_PARANTHESES
  132                 | WRITE_ACCESS_OP VariableExpression COMMA VariableExpression CLOSE_PARANTHESES

  133 VariableExpressionElement: Value
  134                          | Variable
  135                          | ManagedMemAccess

  136 MultiplicativeVariableExpressionElementAccess: MultiplicativeFactor
  137                                              | MINUS MultiplicativeFactor
  138                                              | MultiplicativeVariableExpressionElementAccess MultiplicativeArithmeticOp MultiplicativeFactor

  139 MultiplicativeFactor: VariableExpressionElement
  140                     | OPEN_PARANTHESES VariableExpression CLOSE_PARANTHESES

  141 VariableExpression: MultiplicativeVariableExpressionElementAccess
  142                   | VariableExpression AdditiveArithmeticOp MultiplicativeVariableExpressionElementAccess

  143 AdditiveArithmeticOp: PLUS
  144                     | MINUS

  145 MultiplicativeArithmeticOp: MULTIPLY
  146                           | DIVIDE

  147 ThreadsSection: THREADS_HEADER __th_sec_act_1 ThreadDefList

  148 __th_sec_act_1: /* empty */

  149 ThreadDefList: ThreadDef SEMICOLON
  150              | ThreadDefList ThreadDef SEMICOLON

  151 ThreadDef: ThreadType __threadDef_act_1 DEFINITION_ASSIGN TxBlockList

  152 __threadDef_act_1: /* empty */

  153 ThreadType: DescriptionName
  154           | ThreadType COMMA DescriptionName

  155 TxBlockList: TxBlockListElement
  156            | TxBlockList COMMA TxBlockListElement

  157 TxBlockListElement: BoundedRepetitionTxBlockListElement
  158                   | UnboundedRepetitionTxBlockListElement

  159 BoundedRepetitionTxBlockListElement: DescriptionName
  160                                    | Delay
  161                                    | SMALLER_THAN TxChoiceList GREATER_THAN
  162                                    | SMALLER_THAN TxChoiceList GREATER_THAN FixedValue
  163                                    | SMALLER_THAN TxChoiceList GREATER_THAN Variable
  164                                    | OPEN_PARANTHESES __txBlockStart_act TxBlockList CLOSE_PARANTHESES
  165                                    | OPEN_PARANTHESES __txBlockStart_act TxBlockList CLOSE_PARANTHESES FixedValue
  166                                    | OPEN_PARANTHESES __txBlockStart_act TxBlockList CLOSE_PARANTHESES VariableExpression

  167 UnboundedRepetitionTxBlockListElement: DescriptionName MULTIPLY
  168                                      | SMALLER_THAN TxChoiceList GREATER_THAN MULTIPLY
  169                                      | OPEN_PARANTHESES __txBlockStart_act TxBlockList CLOSE_PARANTHESES MULTIPLY

  170 __txBlockStart_act: /* empty */

  171 TxChoiceList: TxChoiceListElement
  172             | TxChoiceList BAR TxChoiceListElement

  173 Scope: DescriptionName COLON

  174 TxChoiceListElement: DescriptionName
  175                    | Scope FixedValue PERCENTAGE
  176                    | Scope FLOAT_NUMBER PERCENTAGE

  177 SchedulesSection: SCHEDULES_HEADER __sch_sec_act_1 ScheduleDefList

  178 __sch_sec_act_1: /* empty */

  179 ScheduleDefList: ScheduleDef SEMICOLON
  180                | ScheduleDefList ScheduleDef SEMICOLON

  181 ScheduleDef: DescriptionName DEFINITION_ASSIGN ScheduleSpec

  182 ScheduleSpec: TxPortion
  183             | ScheduleSpec COMMA TxPortion

  184 TxPortion: DescriptionName
  185          | DescriptionName LABEL
  186          | OPEN_BRACKETS ConditionalExpression CLOSE_BRACKETS
  187          | VarAssigns

  188 InvariantsSection: INVARIANTS_HEADER __inv_sec_act_1 InvariantDefList

  189 __inv_sec_act_1: /* empty */

  190 InvariantDefList: InvariantDef SEMICOLON
  191                 | InvariantDefList InvariantDef SEMICOLON

  192 InvariantDef: OPEN_BRACKETS NO_ABORT_INVARIANT_TOKEN CLOSE_BRACKETS
  193             | OPEN_BRACKETS ConditionalExpression CLOSE_BRACKETS


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMICOLON (258) 12 13 24 25 29 30 31 32 46 47 120 149 150 179 180 190
    191
EOF_TOKEN (259)
PROPERTIES_HEADER (260) 22
DEFINITIONS_HEADER (261) 27
TRANSACTIONS_HEADER (262) 44
THREADS_HEADER (263) 147
SCHEDULES_HEADER (264) 177
INVARIANTS_HEADER (265) 188
VALUE_ASSIGN (266) 14 15 16 17 18 19 26 33 36 37 38 39 40 41 42 43
    75 100
DEFINITION_ASSIGN (267) 48 151 181
READ_ACCESS_OP (268) 64 65 129 131
WRITE_ACCESS_OP (269) 66 67 130 132
DELAY_OP (270) 59
ABORT_OP (271) 68
MEM_ALLOC_OP (272) 69
MEM_FREE_OP (273) 70
MEM_BARRIER_OP (274) 71
JUMP_OP (275) 101
OPEN_BRACKETS (276) 76 85 186 192 193
CLOSE_BRACKETS (277) 17 18 34 35 40 41 76 85 127 128 186 192 193
OPEN_PARANTHESES (278) 20 21 89 90 92 93 140 164 165 166 169
CLOSE_PARANTHESES (279) 20 21 59 64 65 66 67 68 69 70 71 89 90 92 93
    101 129 130 131 132 140 164 165 166 169
COMMA (280) 51 65 67 69 71 99 131 132 154 156 183
BAR (281) 79 80 172
OPEN_CURLY_BRACKETS (282) 96
CLOSE_CURLY_BRACKETS (283) 72 77 96
LOOP_START (284) 72
CONDITION_START (285) 77
RANGE_SEPERATOR (286) 119 120
LABEL (287) 56 101 185
NAME (288) 14 26 37 71 116 121
ARRAY_NAME (289) 17 34 40 127
NAME_ALL_CAPITALS (290) 115 117
LOCAL_VARIABLE_NAME (291) 15 36 39 43 122 124
LOCAL_ARRAY_NAME (292) 18 35 41 128
NUMBER (293) 114
FLOAT_NUMBER (294) 176
COLON (295) 72 81 173
PERCENTAGE (296) 175 176
NO_ABORT_INVARIANT_TOKEN (297) 192
EQUAL (298) 102
NOT_EQUAL (299) 103
GREATER_EQUAL (300) 107
SMALLER_EQUAL (301) 106
GREATER_THAN (302) 43 105 118 161 162 163 168
SMALLER_THAN (303) 43 104 118 161 162 163 168
VAR_EXPR_TEST_SECT_HEADER (304) 10
VAR_EXPR_EVAL (305) 20 21
PLUS (306) 143
MINUS (307) 137 144
DIVIDE (308) 146
MULTIPLY (309) 145 167 168 169
OR (310) 110
AND (311) 109
NOT (312) 108 111


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Config (59)
    on left: 1 2, on right: 0 2
Section (60)
    on left: 3 4 5 6 7 8 9, on right: 1 2
VarExprTestSection (61)
    on left: 10, on right: 9
_varExprTestSectstart_act (62)
    on left: 11, on right: 10
VarExprTestDefList (63)
    on left: 12 13, on right: 10 13
VarExprTestDef (64)
    on left: 14 15 16 17 18 19 20 21, on right: 12 13
PropertiesSection (65)
    on left: 22, on right: 3
__prop_sec_act_1 (66)
    on left: 23, on right: 22
PropertyDefList (67)
    on left: 24 25, on right: 22 25
PropertyDef (68)
    on left: 26, on right: 24 25
DefinitionsSection (69)
    on left: 27, on right: 4
__def_sec_act_1 (70)
    on left: 28, on right: 27
VariableDefList (71)
    on left: 29 30 31 32, on right: 27 31 32
ArrayInit (72)
    on left: 33, on right: 30 32
ArrayDef (73)
    on left: 34 35, on right: 16 33
VariableDef (74)
    on left: 36 37 38 39 40 41 42 43, on right: 29 31
TransactionsSection (75)
    on left: 44, on right: 5
__tx_sec_act_1 (76)
    on left: 45, on right: 44
TxDefList (77)
    on left: 46 47, on right: 44 47
TxDef (78)
    on left: 48, on right: 46 47
__tx_sec_act_2 (79)
    on left: 49, on right: 48
TxSpec (80)
    on left: 50 51, on right: 48 51 72 81 83
TxSpecElement (81)
    on left: 52 53 54 55 56 57 58, on right: 50 51
Delay (82)
    on left: 59, on right: 58 160
TxOp (83)
    on left: 60 61 62 63, on right: 52
MemAccessOp (84)
    on left: 64 65 66 67, on right: 60
AbortOp (85)
    on left: 68, on right: 61
MemAllocOp (86)
    on left: 69 70, on right: 62
MemBarrierOp (87)
    on left: 71, on right: 63
TxLoopDef (88)
    on left: 72, on right: 53
__txLoopDef_act_1 (89)
    on left: 73, on right: 72
LoopCondition (90)
    on left: 74 75, on right: 72
LoopRange (91)
    on left: 76, on right: 75
TxConditionalDef (92)
    on left: 77, on right: 54
ConditionalTxSpec (93)
    on left: 78 79 80, on right: 77 79 80
ConditionalTxSpecElement (94)
    on left: 81, on right: 78 79
__conditionalTxSpecElement_act_1 (95)
    on left: 82, on right: 81
DefaulfConditionTxSpecElement (96)
    on left: 83, on right: 80
__defaultCondTxSpecElement_act_1 (97)
    on left: 84, on right: 83
Condition (98)
    on left: 85, on right: 74 81
ConditionalExpression (99)
    on left: 86 87, on right: 21 85 186 193
SimpleConditionalExpression (100)
    on left: 88, on right: 86 89 90
ComplexConditionalExpressionElement (101)
    on left: 89 90, on right: 91
ComplexConditionalUnit (102)
    on left: 91 92 93, on right: 94 95
ComplexConditionalExpression (103)
    on left: 94 95, on right: 87 92 93
VarAssigns (104)
    on left: 96, on right: 55 187
__varAssigns_act_1 (105)
    on left: 97, on right: 96
VarAssignList (106)
    on left: 98 99, on right: 96 99
VarAssignment (107)
    on left: 100, on right: 98 99
Jump (108)
    on left: 101, on right: 57
RelationalOp (109)
    on left: 102 103 104 105 106 107 108, on right: 88
BooleanOp (110)
    on left: 109 110, on right: 95
UnaryBooleanOp (111)
    on left: 111, on right: 90 93
Value (112)
    on left: 112 113, on right: 16 17 18 33 37 38 39 40 41 42 133
FixedValue (113)
    on left: 114, on right: 14 15 19 26 36 68 112 162 165 175
Constant (114)
    on left: 115, on right: 19 38 123
DescriptionName (115)
    on left: 116 117, on right: 48 153 154 159 167 173 174 181 184
    185
RandomizedRange (116)
    on left: 118, on right: 113
Range (117)
    on left: 119 120, on right: 34 35 43 76 118
Variable (118)
    on left: 121 122 123 124 125 126, on right: 75 100 134 163
ArrayAccess (119)
    on left: 127 128, on right: 42 125 126
ManagedMemAccess (120)
    on left: 129 130 131 132, on right: 135
VariableExpressionElement (121)
    on left: 133 134 135, on right: 139
MultiplicativeVariableExpressionElementAccess (122)
    on left: 136 137 138, on right: 138 141 142
MultiplicativeFactor (123)
    on left: 139 140, on right: 136 137 138
VariableExpression (124)
    on left: 141 142, on right: 17 18 20 40 41 59 64 65 66 67 69 70
    88 100 119 120 127 128 129 130 131 132 140 142 166
AdditiveArithmeticOp (125)
    on left: 143 144, on right: 142
MultiplicativeArithmeticOp (126)
    on left: 145 146, on right: 138
ThreadsSection (127)
    on left: 147, on right: 6
__th_sec_act_1 (128)
    on left: 148, on right: 147
ThreadDefList (129)
    on left: 149 150, on right: 147 150
ThreadDef (130)
    on left: 151, on right: 149 150
__threadDef_act_1 (131)
    on left: 152, on right: 151
ThreadType (132)
    on left: 153 154, on right: 151 154
TxBlockList (133)
    on left: 155 156, on right: 151 156 164 165 166 169
TxBlockListElement (134)
    on left: 157 158, on right: 155 156
BoundedRepetitionTxBlockListElement (135)
    on left: 159 160 161 162 163 164 165 166, on right: 157
UnboundedRepetitionTxBlockListElement (136)
    on left: 167 168 169, on right: 158
__txBlockStart_act (137)
    on left: 170, on right: 164 165 166 169
TxChoiceList (138)
    on left: 171 172, on right: 161 162 163 168 172
Scope (139)
    on left: 173, on right: 39 42 124 126 175 176
TxChoiceListElement (140)
    on left: 174 175 176, on right: 171 172
SchedulesSection (141)
    on left: 177, on right: 7
__sch_sec_act_1 (142)
    on left: 178, on right: 177
ScheduleDefList (143)
    on left: 179 180, on right: 177 180
ScheduleDef (144)
    on left: 181, on right: 179 180
ScheduleSpec (145)
    on left: 182 183, on right: 181 183
TxPortion (146)
    on left: 184 185 186 187, on right: 182 183
InvariantsSection (147)
    on left: 188, on right: 8
__inv_sec_act_1 (148)
    on left: 189, on right: 188
InvariantDefList (149)
    on left: 190 191, on right: 188 191
InvariantDef (150)
    on left: 192 193, on right: 190 191


state 0

    0 $accept: . Config $end

    PROPERTIES_HEADER          shift, and go to state 1
    DEFINITIONS_HEADER         shift, and go to state 2
    TRANSACTIONS_HEADER        shift, and go to state 3
    THREADS_HEADER             shift, and go to state 4
    SCHEDULES_HEADER           shift, and go to state 5
    INVARIANTS_HEADER          shift, and go to state 6
    VAR_EXPR_TEST_SECT_HEADER  shift, and go to state 7

    Config               go to state 8
    Section              go to state 9
    VarExprTestSection   go to state 10
    PropertiesSection    go to state 11
    DefinitionsSection   go to state 12
    TransactionsSection  go to state 13
    ThreadsSection       go to state 14
    SchedulesSection     go to state 15
    InvariantsSection    go to state 16


state 1

   22 PropertiesSection: PROPERTIES_HEADER . __prop_sec_act_1 PropertyDefList

    $default  reduce using rule 23 (__prop_sec_act_1)

    __prop_sec_act_1  go to state 17


state 2

   27 DefinitionsSection: DEFINITIONS_HEADER . __def_sec_act_1 VariableDefList

    $default  reduce using rule 28 (__def_sec_act_1)

    __def_sec_act_1  go to state 18


state 3

   44 TransactionsSection: TRANSACTIONS_HEADER . __tx_sec_act_1 TxDefList

    $default  reduce using rule 45 (__tx_sec_act_1)

    __tx_sec_act_1  go to state 19


state 4

  147 ThreadsSection: THREADS_HEADER . __th_sec_act_1 ThreadDefList

    $default  reduce using rule 148 (__th_sec_act_1)

    __th_sec_act_1  go to state 20


state 5

  177 SchedulesSection: SCHEDULES_HEADER . __sch_sec_act_1 ScheduleDefList

    $default  reduce using rule 178 (__sch_sec_act_1)

    __sch_sec_act_1  go to state 21


state 6

  188 InvariantsSection: INVARIANTS_HEADER . __inv_sec_act_1 InvariantDefList

    $default  reduce using rule 189 (__inv_sec_act_1)

    __inv_sec_act_1  go to state 22


state 7

   10 VarExprTestSection: VAR_EXPR_TEST_SECT_HEADER . _varExprTestSectstart_act VarExprTestDefList

    $default  reduce using rule 11 (_varExprTestSectstart_act)

    _varExprTestSectstart_act  go to state 23


state 8

    0 $accept: Config . $end

    $end  shift, and go to state 24


state 9

    1 Config: Section .
    2       | Section . Config

    PROPERTIES_HEADER          shift, and go to state 1
    DEFINITIONS_HEADER         shift, and go to state 2
    TRANSACTIONS_HEADER        shift, and go to state 3
    THREADS_HEADER             shift, and go to state 4
    SCHEDULES_HEADER           shift, and go to state 5
    INVARIANTS_HEADER          shift, and go to state 6
    VAR_EXPR_TEST_SECT_HEADER  shift, and go to state 7

    $default  reduce using rule 1 (Config)

    Config               go to state 25
    Section              go to state 9
    VarExprTestSection   go to state 10
    PropertiesSection    go to state 11
    DefinitionsSection   go to state 12
    TransactionsSection  go to state 13
    ThreadsSection       go to state 14
    SchedulesSection     go to state 15
    InvariantsSection    go to state 16


state 10

    9 Section: VarExprTestSection .

    $default  reduce using rule 9 (Section)


state 11

    3 Section: PropertiesSection .

    $default  reduce using rule 3 (Section)


state 12

    4 Section: DefinitionsSection .

    $default  reduce using rule 4 (Section)


state 13

    5 Section: TransactionsSection .

    $default  reduce using rule 5 (Section)


state 14

    6 Section: ThreadsSection .

    $default  reduce using rule 6 (Section)


state 15

    7 Section: SchedulesSection .

    $default  reduce using rule 7 (Section)


state 16

    8 Section: InvariantsSection .

    $default  reduce using rule 8 (Section)


state 17

   22 PropertiesSection: PROPERTIES_HEADER __prop_sec_act_1 . PropertyDefList

    NAME  shift, and go to state 26

    PropertyDefList  go to state 27
    PropertyDef      go to state 28


state 18

   27 DefinitionsSection: DEFINITIONS_HEADER __def_sec_act_1 . VariableDefList

    NAME                 shift, and go to state 29
    ARRAY_NAME           shift, and go to state 30
    NAME_ALL_CAPITALS    shift, and go to state 31
    LOCAL_VARIABLE_NAME  shift, and go to state 32
    LOCAL_ARRAY_NAME     shift, and go to state 33

    VariableDefList  go to state 34
    ArrayInit        go to state 35
    ArrayDef         go to state 36
    VariableDef      go to state 37
    Constant         go to state 38
    DescriptionName  go to state 39
    Scope            go to state 40


state 19

   44 TransactionsSection: TRANSACTIONS_HEADER __tx_sec_act_1 . TxDefList

    NAME               shift, and go to state 41
    NAME_ALL_CAPITALS  shift, and go to state 42

    TxDefList        go to state 43
    TxDef            go to state 44
    DescriptionName  go to state 45


state 20

  147 ThreadsSection: THREADS_HEADER __th_sec_act_1 . ThreadDefList

    NAME               shift, and go to state 41
    NAME_ALL_CAPITALS  shift, and go to state 42

    DescriptionName  go to state 46
    ThreadDefList    go to state 47
    ThreadDef        go to state 48
    ThreadType       go to state 49


state 21

  177 SchedulesSection: SCHEDULES_HEADER __sch_sec_act_1 . ScheduleDefList

    NAME               shift, and go to state 41
    NAME_ALL_CAPITALS  shift, and go to state 42

    DescriptionName  go to state 50
    ScheduleDefList  go to state 51
    ScheduleDef      go to state 52


state 22

  188 InvariantsSection: INVARIANTS_HEADER __inv_sec_act_1 . InvariantDefList

    OPEN_BRACKETS  shift, and go to state 53

    InvariantDefList  go to state 54
    InvariantDef      go to state 55


state 23

   10 VarExprTestSection: VAR_EXPR_TEST_SECT_HEADER _varExprTestSectstart_act . VarExprTestDefList

    NAME                 shift, and go to state 56
    ARRAY_NAME           shift, and go to state 57
    NAME_ALL_CAPITALS    shift, and go to state 58
    LOCAL_VARIABLE_NAME  shift, and go to state 59
    LOCAL_ARRAY_NAME     shift, and go to state 60
    VAR_EXPR_EVAL        shift, and go to state 61

    VarExprTestDefList  go to state 62
    VarExprTestDef      go to state 63
    ArrayDef            go to state 64
    Constant            go to state 65


state 24

    0 $accept: Config $end .

    $default  accept


state 25

    2 Config: Section Config .

    $default  reduce using rule 2 (Config)


state 26

   26 PropertyDef: NAME . VALUE_ASSIGN FixedValue

    VALUE_ASSIGN  shift, and go to state 66


state 27

   22 PropertiesSection: PROPERTIES_HEADER __prop_sec_act_1 PropertyDefList .
   25 PropertyDefList: PropertyDefList . PropertyDef SEMICOLON

    NAME  shift, and go to state 26

    $default  reduce using rule 22 (PropertiesSection)

    PropertyDef  go to state 67


state 28

   24 PropertyDefList: PropertyDef . SEMICOLON

    SEMICOLON  shift, and go to state 68


state 29

   37 VariableDef: NAME . VALUE_ASSIGN Value
  116 DescriptionName: NAME .

    VALUE_ASSIGN  shift, and go to state 69

    $default  reduce using rule 116 (DescriptionName)


state 30

   34 ArrayDef: ARRAY_NAME . Range CLOSE_BRACKETS
   40 VariableDef: ARRAY_NAME . VariableExpression CLOSE_BRACKETS VALUE_ASSIGN Value

    READ_ACCESS_OP       shift, and go to state 70
    WRITE_ACCESS_OP      shift, and go to state 71
    OPEN_PARANTHESES     shift, and go to state 72
    NAME                 shift, and go to state 73
    ARRAY_NAME           shift, and go to state 74
    NAME_ALL_CAPITALS    shift, and go to state 31
    LOCAL_VARIABLE_NAME  shift, and go to state 75
    LOCAL_ARRAY_NAME     shift, and go to state 76
    NUMBER               shift, and go to state 77
    SMALLER_THAN         shift, and go to state 78
    MINUS                shift, and go to state 79

    Value                                          go to state 80
    FixedValue                                     go to state 81
    Constant                                       go to state 82
    DescriptionName                                go to state 39
    RandomizedRange                                go to state 83
    Range                                          go to state 84
    Variable                                       go to state 85
    ArrayAccess                                    go to state 86
    ManagedMemAccess                               go to state 87
    VariableExpressionElement                      go to state 88
    MultiplicativeVariableExpressionElementAccess  go to state 89
    MultiplicativeFactor                           go to state 90
    VariableExpression                             go to state 91
    Scope                                          go to state 92


state 31

  115 Constant: NAME_ALL_CAPITALS .
  117 DescriptionName: NAME_ALL_CAPITALS .

    COLON     reduce using rule 117 (DescriptionName)
    $default  reduce using rule 115 (Constant)


state 32

   36 VariableDef: LOCAL_VARIABLE_NAME . VALUE_ASSIGN FixedValue
   43            | LOCAL_VARIABLE_NAME . VALUE_ASSIGN SMALLER_THAN Range GREATER_THAN

    VALUE_ASSIGN  shift, and go to state 93


state 33

   35 ArrayDef: LOCAL_ARRAY_NAME . Range CLOSE_BRACKETS
   41 VariableDef: LOCAL_ARRAY_NAME . VariableExpression CLOSE_BRACKETS VALUE_ASSIGN Value

    READ_ACCESS_OP       shift, and go to state 70
    WRITE_ACCESS_OP      shift, and go to state 71
    OPEN_PARANTHESES     shift, and go to state 72
    NAME                 shift, and go to state 73
    ARRAY_NAME           shift, and go to state 74
    NAME_ALL_CAPITALS    shift, and go to state 31
    LOCAL_VARIABLE_NAME  shift, and go to state 75
    LOCAL_ARRAY_NAME     shift, and go to state 76
    NUMBER               shift, and go to state 77
    SMALLER_THAN         shift, and go to state 78
    MINUS                shift, and go to state 79

    Value                                          go to state 80
    FixedValue                                     go to state 81
    Constant                                       go to state 82
    DescriptionName                                go to state 39
    RandomizedRange                                go to state 83
    Range                                          go to state 94
    Variable                                       go to state 85
    ArrayAccess                                    go to state 86
    ManagedMemAccess                               go to state 87
    VariableExpressionElement                      go to state 88
    MultiplicativeVariableExpressionElementAccess  go to state 89
    MultiplicativeFactor                           go to state 90
    VariableExpression                             go to state 95
    Scope                                          go to state 92


state 34

   27 DefinitionsSection: DEFINITIONS_HEADER __def_sec_act_1 VariableDefList .
   31 VariableDefList: VariableDefList . VariableDef SEMICOLON
   32                | VariableDefList . ArrayInit SEMICOLON

    NAME                 shift, and go to state 29
    ARRAY_NAME           shift, and go to state 30
    NAME_ALL_CAPITALS    shift, and go to state 31
    LOCAL_VARIABLE_NAME  shift, and go to state 32
    LOCAL_ARRAY_NAME     shift, and go to state 33

    $default  reduce using rule 27 (DefinitionsSection)

    ArrayInit        go to state 96
    ArrayDef         go to state 36
    VariableDef      go to state 97
    Constant         go to state 38
    DescriptionName  go to state 39
    Scope            go to state 40


state 35

   30 VariableDefList: ArrayInit . SEMICOLON

    SEMICOLON  shift, and go to state 98


state 36

   33 ArrayInit: ArrayDef . VALUE_ASSIGN Value

    VALUE_ASSIGN  shift, and go to state 99


state 37

   29 VariableDefList: VariableDef . SEMICOLON

    SEMICOLON  shift, and go to state 100


state 38

   38 VariableDef: Constant . VALUE_ASSIGN Value

    VALUE_ASSIGN  shift, and go to state 101


state 39

  173 Scope: DescriptionName . COLON

    COLON  shift, and go to state 102


state 40

   39 VariableDef: Scope . LOCAL_VARIABLE_NAME VALUE_ASSIGN Value
   42            | Scope . ArrayAccess VALUE_ASSIGN Value

    ARRAY_NAME           shift, and go to state 74
    LOCAL_VARIABLE_NAME  shift, and go to state 103
    LOCAL_ARRAY_NAME     shift, and go to state 76

    ArrayAccess  go to state 104


state 41

  116 DescriptionName: NAME .

    $default  reduce using rule 116 (DescriptionName)


state 42
